network.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: Deploy VPC Network

Parameters:
  MyIp:
    Type: String
    Default: 0.0.0.0
    Description: own IP adrress

Resources:
  # VPC
  TestVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: test-vpc
  # Internet Gateway
  TestInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: test-igw
  # Internet GatewayとVPCの紐付け
  TestVPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref TestVPC
      InternetGatewayId: !Ref TestInternetGateway
  # ルートテーブルの作成
  TestRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref TestVPC
      Tags:
        - Key: Name
          Value: test-route-table
  # ルーティングの設定
  TestRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref TestRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref TestInternetGateway
  # Subnet
  TestSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId: !Ref TestVPC
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: test-subnet
  # サブネットとルートテーブルの紐付け
  TestSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref TestSubnet
      RouteTableId: !Ref TestRouteTable
  # Security Groups
  TestHTTPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref TestVPC
      GroupName: http-sg
      GroupDescription: allo http
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Join ["/", [!Ref MyIp, "32"]]
  TestSSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref TestVPC
      GroupName: ssh-sg
      GroupDescription: allo ssh
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Join ["/", [!Ref MyIp, "32"]]

Outputs:
  TestHTTPSecurityGroupId:
    Value: !Ref TestHTTPSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-TestHTTPSecurityGroupId
  TestSSHSecurityGroupId:
      Value: !Ref TestSSHSecurityGroup
      Export:
        Name: !Sub ${AWS::StackName}-TestSSHSecurityGroupId
  TestSubnetId:
    Value: !Ref TestSubnet
    Export:
      Name: !Sub ${AWS::StackName}-TestSubnetId
